--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
   "name": "admin-dashboard",
   "version": "1.0.0",
-  "description": "Admin dashboard with Node.js and MongoDB",
-  "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "echo 'No build step required'"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "body-parser": "^2.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^6.0.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "mongoose": "^8.18.1",
-    "pdf-parse": "^1.1.1"
+    "body-parser": "^1.19.0",
+    "pdf-parse": "^1.1.1",
+    "crypto-js": "^4.1.1"
   }
 }
