--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
-  "name": "admin-dashboard",
+  "name": "school-system-aldabeia",
   "version": "1.0.0",
-  "description": "Admin dashboard with Node.js and MongoDB",
-  "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "body-parser": "^2.2.0",
+    "express": "^4.18.2",
+    "mongoose": "^7.6.3",
     "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "mongoose": "^8.18.1",
-    "pdf-parse": "^1.1.1"
+    "body-parser": "^1.20.2",
+    "pdf-parse": "^1.1.1",
+    "crypto": "^1.0.1",
+    "serverless-http": "^3.2.0"
   }
 }
