--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "school-system-nursing",
+  "name": "school-nursing",
   "version": "1.0.0",
-  "private": true,
   "scripts": {
     "start": "node server.js"
   },
@@ -10,7 +9,8 @@
     "mongoose": "^7.8.7",
     "cors": "^2.8.5",
     "body-parser": "^1.20.3",
-    "pdf-parse": "^1.1.1",
+    "pdf-parse": "^1.1.4",
+    "crypto": "^1.0.1",
     "serverless-http": "^3.2.0"
   }
 }
